fix(style): tags clipped styling

--- a/src/components/ContentView/_shared.scss
+++ b/src/components/ContentView/_shared.scss
@@ -98,7 +98,7 @@
             position: relative;
             color: rgba(0, 0, 0, 0.6);
             display: inline-block;
-            margin: 20px 10px 0 6px;
+            margin: 20px 10px 0 14px;
             line-height: $totalHeight;
             font-size: $fontSize;
             padding:#{($totalHeight/2.0)-1.0} 15px;
